--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "api/server.js": {
+      "src/server.ts": {
         "memory": 1024,
         "includeFiles": "dev.db"
       }
